# geoclue2-agent

./: .gitignore  ChangeLog  Makefile.am  configure.ac
lib/: geoclue-agent-interface.c  geoclue-agent-interface.h
misc/: Makefile.am  io.github.koko-ng.geoclue-agent.desktop  io.github.koko-ng.geoclue-agent.desktop.in.in  io.github.koko-ng.geoclue-agent.gschema.xml
po/: ChangeLog  Makevars  POTFILES.in  en@boldquot.po  en@quot.po  geoclueagent.pot
src/: Makefile.am  app.c  app.h  appwin.c  appwin.h  service.c  service.h  servicewin.c  servicewin.h  tags
